test: make every suite runnable on a real JVM 8 toolchain
Per the PR #289 review goal (the entire pipeline on both the Java 8 base
version and the latest LTS), the test and regressionTest sources move to
release 8 and every source root now compiles under a single
`tasks.withType(JavaCompile) { options.release = 8 }` pin. A `-PtestJvm=N`
property points the forked test JVMs at a real toolchain (auto-provisioned by
the foojay resolver added in settings.gradle); the Gradle daemon itself stays
on 17+, which is all Gradle 9 requires -- no Gradle downgrade needed.

Source changes are mechanical: the two regression harness records become
plain classes with every JSON property name pinned explicitly (the 12,475
reference files use the record-era component names verbatim, which bean
naming would silently rename), Map.of/List.of/var/readAllBytes/
Files.mismatch/toString(Charset) get Java 8 equivalents. Test deps move to
their Java-8-capable lines: mockito 4.11.0, junit-pioneer 1.9.1, logback
1.3.15 -- the only APIs in use (mock/when, @DefaultTimeZone) are identical.

Executed evidence on Temurin 1.8.0_492: 541 unit tests / 0 failures,
12,475 regression archives / 0 failures, ppmHeapDumpTest green; the same
suites stay green on the default JVM.

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>